deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minicd
  labels:
    app.kubernetes.io/name: minicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minicd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minicd
    spec:
      containers:
      - name: minicd
        image: "fabijanbajo/minicd:0.1.0"
        imagePullPolicy: Always
        args:
        - "-verbose"
        - "-hooks=/emptydir-volume/git-webhook.yaml"
        - "-hotreload"
        ports:
        - name: http
          containerPort: 9000
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: emptydir-volume
          mountPath: /emptydir-volume
        - name: webhook-configmap
          mountPath: /emptydir-volume/git-webhook.yaml
          subPath: git-webhook.yaml
        # - name: pipeline-configmap
        #   mountPath: /emptydir-volume/pipeline-job.yaml
        #   subPath: pipeline-job.yaml
      volumes:
      - name: emptydir-volume
        emptyDir: {}
      - name: webhook-configmap
        configMap:
          name: "git-webhook-configmap"
      - name: scripts-configmap
        configMap:
          name: "scripts-configmap"
      - name: pipeline-configmap
        configMap:
          name: "pipeline-configmap"
