poc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc
  labels:
    app: minicd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: poc
  template:
    metadata:
      labels:
        app: poc
    spec:
      volumes:
      - name: cert-dir
        emptyDir: {}
      containers:
      - name: poc
        image: docker:dind
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: "/etc/docker/certs.d/image-registry"
          name: cert-dir
---

apiVersion: v1
kind: Service
metadata:
  name: poc
  labels:
    app: minicd
spec:
  selector:
    app: poc
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
