registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-registry
  labels:
    app: minicd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: image-registry
  template:
    metadata:
      labels:
        app: image-registry
    spec:
      volumes:
      - name: cert-dir
        emptyDir: {}
      - name: pub-dir
        emptyDir: {}
      containers:
      - name: cert-server
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: pub-dir
      - name: image-registry
        image: registry:2
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
        securityContext:
          privileged: true
        ports:
        - containerPort: 5000
        - containerPort: 443
        volumeMounts:
        - mountPath: /certs
          name: cert-dir
        - mountPath: /certs-pub
          name: pub-dir
---
apiVersion: v1
kind: Service
metadata:
  name: image-registry
  labels:
    app: minicd
spec:
  selector:
    app: image-registry
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http-cert
      protocol: TCP
      port: 8080
      targetPort: 80
